--- a/RubyDay2013/RubyDay2013-Info.plist
+++ b/RubyDay2013/RubyDay2013-Info.plist
@@ -24,6 +24,11 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>EurostileRegular.ttf</string>
+		<string>EurostileBold.ttf</string>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
