Load avatars from disk, to avoid dealing with HTTPs and the special US approval request.

--- a/RubyDay2013/RubyDay2013-Info.plist
+++ b/RubyDay2013/RubyDay2013-Info.plist
@@ -22,11 +22,11 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.webrain.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>it.webrain.rubyday2013</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>${PRODUCT_NAME}</string>
+	<string>rubyday2013</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
